# keyring-insecure-backend

./: README.md
.github/workflows/: build.yaml  publish.yaml  sync.yaml
code/python/: pyproject.toml
code/python/keyring_insecure_backend/: ConfFileModel.py  InsecureKeyringBackend.py
data/: keyring_insecure_backend.json
doc/md/Release Notes/: 20250323 Release Notes 0.0.1.md
etc/: keyring_insecure_backend.yaml
