# pyproject.toml
#
# python project configuration
#
# author  : stefan schablowski
# contact : stefan.schablowski@desmodyne.com
# created : 2025-03-10


[build-system]
requires       = ['hatchling']
build-backend  = 'hatchling.build'


[project]
authors = [
    { name = 'Stefan Schablowski', email = 'stefan.schablowski@desmodyne.com' }
]

classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Topic :: Security',
    'Typing :: Typed'
]

dependencies = [
    "keyring>=25.6.0",
]

description        = 'An insecure Keyring backend that stores secrets in plain text.'
license            = { text = 'MIT' }
name               = 'keyring-insecure-backend'
requires-python    = '>=3.10'
version            = '0.0.0'


[dependency-groups]
dev = [
    "ruff>=0.9.10",
]
